tests/schemas/error/001_missing_version.txt
Error: Unexpected character 's' -> {filename}:1:1

Expected one of:
    * VERSION

1 | struct A {
  | ~~~~~~~~~~
